# 3DReconstructie

./: README.md
Client/: CMakeLists.txt  ClientRESTHandler.h  ConversionsExtra.h  CurvaturePointRepresentation.h  FilterFunctions.h  FrameReader.h  ICPModelConstructor.h  rest_client2.cpp  stdafx.h
Cluster/: CMakeLists.txt  ClusterBoot.h  ClusterClient.cpp  ClusterClient.h  ClusterRESTHandler.cpp  ClusterRESTHandler.h  ConversionsExtra.h  rest_cluster2.cpp  stdafx.h
Registrator/: CMakeLists.txt  ClusterFunctions.h  ClusterTree.h  ConversionsExtra.h  CoordinatorRESTHandler.h  IDGenerator.cpp  IDGenerator.h  kmeans.cpp  kmeans.h  rest_coordinator2.cpp  stdafx.h
